# Trading212-PnL

./: .gitignore  README.md
python_prototype/: main.py
rust_version/: Cargo.toml  api_key.txt  ipob.py
rust_version/src/: dividends.rs  main.rs  plotter.rs  stats.rs  t212.rs  yahoo.rs
