[package]
name = "t212"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
ndarray = { version = "0.16.1"}
textplots = "0.8"
rgb = "0.8"