[package]
name = "t212"
version = "0.1.0"
edition = "2021"



[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = {version = "1.0"}
chrono = {version = "0.4", features = ["serde"]}
serde = { version = "1.0", features = ["derive"] }
textplots = "0.8"
rgb = "0.8"
futures = "0.3.31"
rand = "0.9"


[profile.release]
opt-level = "z"  # Optimize for size.
lto = true
panic = "abort"